<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="default_string">Default</string>
    <string name="generalui_category">General UI</string>
    <string name="statusbar_category">Status Bar</string>
    <string name="navigation_category">Navigation Bar</string>
    <string name="multitasking_category">Multi-Tasking</string>
    <string name="system_category">System</string>
    <string name="misc_category">Miscellaneous</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="lmt_settings">PIE Settings</string>
    <string name="animations_category">Animations</string>
    <string name="battery_category">Battery</string>
    <string name="misctweaks_category">Misc. Tweaks</string>
    <string name="expanded_desktop_category">Expanded Desktop</string>
    <string name="powermenu_category">Power Menu</string>
    <string name="quicksettings_category">Quick Settings</string>
    <string name="recents_category">Recents</string>
    <string name="statusbar_items_category">Statusbar Items</string>
    <string name="statusbar_notifications_category">Notifications</string>
    <string name="navigation_bar_options">Extended options</string>
    <string name="wakelockblocker_category">Wakelock Blocker</string>
    <string name="geatures_category">Gestures</string>
    <string name="listview_animations_category">List View Animations</string>
    <string name="system_animations_category">System Animations</string>
    <string name="omniswitch_category">OmniSwitch</string>
    <string name="teslacoil_dialog_title">We want to help</string>
    <string name="teslacoil_dialog_message">We aren\'t mindreaders if you find any bugs let up know in our community in the proper section.</string>
    <string name="teslacoil_dialog_toast">READ THE WHOLE THING!</string>
    <string name="toast_icon_title">Toast icon</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="battery_title">Battery</string>
    <string name="battery2_summary">Customize battery icons and percentage</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_icon_landscape">Icon landscape</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_dotted_circle">Dotted circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Show battery percentage</string>
    <string name="status_bar_battery_percentage_dialog_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden (default)</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="systemuituner">System UI Tuner</string>
    <string name="title_quick_pulldown">Quick pulldown</string>
    <string name="summary_quick_pulldown">%1$s edge of the status bar pulls down Quick Settings</string>
    <string name="quick_pulldown_off">Off</string>
    <string name="quick_pulldown_left">Left</string>
    <string name="quick_pulldown_right">Right</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_reboot">Reboot</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock Down</string>
    <string name="powermenu_soundpanel">Sound Panel</string>
    <string name="advanced_reboot_title">Advanced reboot</string>
    <string name="advanced_reboot_summary">Include options in the power menu for rebooting into recovery and bootloader</string>
    <string name="advanced_reboot_dialog_title">Advanced reboot menu</string>
    <string name="advanced_reboot_disabled">Disable</string>
    <string name="advanced_reboot_hide_on_keyguard">Hide on lock screen</string>
    <string name="advanced_reboot_show_always">Show always</string>
    <string name="wakelock_blocker_summary">Block system wakelocks</string>
    <string name="wakelock_blocker_save">Save</string>
    <string name="wakelock_list_header">Available wakelocks</string>
    <string name="wakelock_blocker_reload">Reload</string>
    <string name="wakelock_blocker_warning_title">Proceed with caution</string>
    <string name="wakelock_blocker_warning">Blocking wakelocks have the potential to cause instability, crashes or data loss</string>
    <string name="expanded_hide_nothing">Hide nothing</string>
    <string name="expanded_hide_status">Hide status bar</string>
    <string name="expanded_hide_navigation">Hide navigation bar</string>
    <string name="expanded_hide_both">Hide both</string>
    <string name="expanded_nothing_to_show">To add a custom per-app configuration for expanded state, set "Enabled for all" to the off position</string>
    <string name="expanded_desktop_state">Expanded state</string>
    <string name="expanded_enabled_for_all">Enabled for all</string>
    <string name="expanded_user_configurable">User configurable</string>
    <string name="force_expanded_notifications_title">Force Expanded Notifications</string>
    <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
    <string name="disable_immersive_message_title">Disable Immersive Mode Messages</string>
    <string name="disable_immersive_message_summary">This will hide all Immersive Mode Messages</string>
    <string name="disable_fc_notifications_title">Disable FC Notifications</string>
    <string name="disable_fc_notifications_summary">This will hide all force close notificaitons</string>
    <string name="double_tap_to_sleep_title">DT2S on Statusbar</string>
    <string name="double_tap_to_sleep_summary">Double tap status bar to put the device to sleep</string>
    <string name="double_tap_sleep_nav_bar_title">DT2S on Navbar</string>
    <string name="double_tap_sleep_nav_bar_summary">Double tap navigation bar to put the device to sleep</string>
    <string name="double_tap_to_sleep_lockscreen_title">DT2S on Lockscreen</string>
    <string name="double_tap_to_sleep_lockscreen_summary">Double tap on the top third or bottom shortcut area of the lock screen to put the device to sleep</string>
    <string name="clock_styles_title">Clock and date</string>
    <string name="clock_styles_summary">Customize clock styles and date format</string>
    <string name="clock_title_enable">Alignment</string>
    <string name="clock_enabled">Enabled</string>
    <string name="clock_disabled">Disabled</string>
    <string name="clock_color_title">Color</string>
    <string name="status_bar_clock_style_reset">Reset color</string>
    <string name="status_bar_show_clock_title">Show clock and date</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="right_clock">Right clock</string>
    <string name="center_clock">Center clock</string>
    <string name="left_clock">Left clock</string>
    <string name="dont_show">Don\'t show</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date</string>
    <string name="clock_time_style">Time</string>
    <string name="clock_date_position">Date position</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="am_pm_clock_normal">Normal font size</string>
    <string name="am_pm_clock_small">Small font size</string>
    <string name="am_pm_clock_none">Don\'t show</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="status_bar_clock_style_reset_message">Reset clock color?</string>
    <string name="carrier_options">Carrier Label</string>
    <string name="show_status_bar_carrier_title">Status bar carrier</string>
    <string name="show_status_bar_carrier_summary">Show carrier in status bar</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="custom_carrier_label_explain">Please enter a new label. Leave blank to revert to stock label.</string>
    <string name="custom_carrier_label_notset">Custom label currently not set</string>
    <string name="status_bar_carrier_color">Carrier label color</string>
    <string name="recents_searchbar_title">Search bar</string>
    <string name="recents_searchbar_summary">Show Google search bar in the recents screen</string>
    <string name="show_clear_all_recents_button_title">Clear All Recents Button</string>
    <string name="show_clear_all_recents_button_summary">Show clear all button on recents panel</string>
    <string name="recents_clear_all_location_title">Clear all recents location</string>
    <string name="recents_clear_all_location_top_right">Top right</string>
    <string name="recents_clear_all_location_top_left">Top left</string>
    <string name="recents_clear_all_location_top_center">Top center</string>
    <string name="recents_clear_all_location_bottom_right">Bottom right</string>
    <string name="navigation_bar_category">Navigation bar</string>
    <string name="navbar_enable_bar">Enable</string>
    <string name="navbar_dimen_title">Dimensions</string>
    <string name="status_bar_show_weather_title">Show weather</string>
    <string name="traffic_category">Traffic Indicators</string>
    <string name="navigation_bar_buttons">Buttons &amp; layout</string>
    <string name="navigation_bar_settings_summary">Edit and rearrange navigation bar buttons</string>
    <string name="navigation_bar_arrow_keys_title">Show arrow keys while typing</string>
    <string name="navigation_bar_arrow_keys_summary">Display left and right cursor buttons while typing. Overrides IME switcher.</string>
    <string name="kill_app_longpress_back">Kill app back button</string>
    <string name="kill_app_longpress_back_summary">Kill the foreground app by long-pressing the back button</string>
    <string name="status_bar_custom_header_title">Time Contextual Header</string>
    <string name="status_bar_custom_header_summary">Enable notification panel header image</string>
    <string name="breathing_notifications_title">Breathing notifications</string>
    <string name="breathing_notifications_summary">Select what notifications you want to breath in the status bar</string>
    <string name="status_bar_tesla_logo_title">Tesla logo</string>
</resources>