<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2015 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/statusbar_category"
    android:layout="@layout/tab"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

       <PreferenceScreen
           android:key="clock_styles"
           android:title="@string/clock_styles_title"
           android:fragment="com.tesla.teslacoil.fragments.ClockStyles" />

          <Preference
            android:key="tesla_logo"
            android:fragment="com.tesla.teslacoil.fragments.TeslaLogo"
            android:title="@string/status_bar_tesla_logo_title" />

        <com.tesla.teslacoil.preference.SystemSettingSwitchPreference
            android:key="status_bar_custom_header"
            android:title="@string/status_bar_custom_header_title"
            android:summary="@string/status_bar_custom_header_summary"
            android:defaultValue="false"/>

         <Preference
            android:key="battery"
            android:fragment="com.tesla.teslacoil.fragments.Battery"
            android:title="@string/battery_category" />

         <Preference
            android:key="quicksettings"
            android:fragment="com.tesla.teslacoil.fragments.QuickSettings"
            android:title="@string/quicksettings_category" />

         <PreferenceScreen
            android:key="systemui_tuner_statusbar"
            android:title="@string/statusbar_items_category">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.TunerActivity" />
         </PreferenceScreen>

       <PreferenceScreen
           android:key="breathing_notifications"
           android:fragment="com.tesla.teslacoil.fragments.BreathingNotifications"
           android:title="@string/breathing_notifications_title" 
           android:summary="@string/breathing_notifications_summary" />

         <Preference
            android:key="statusbar_notifications"
            android:fragment="com.tesla.teslacoil.fragments.StatusbarNotifications"
            android:title="@string/statusbar_notifications_category" />

         <PreferenceScreen
            android:key="carrier_options"
            android:fragment="com.tesla.teslacoil.fragments.CarrierLabel"
            android:title="@string/carrier_options" />

	 <Preference
            android:key="traffic"
            android:fragment="com.tesla.teslacoil.fragments.Traffic"
            android:title="@string/traffic_category" />

        <com.tesla.teslacoil.preference.SystemSettingSwitchPreference
            android:key="status_bar_show_weather"
            android:title="@string/status_bar_show_weather_title"
            android:defaultValue="true" />

</PreferenceScreen>

