<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2015 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/navigation_category"
    android:layout="@layout/tab"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:key="navigation_bar"
        android:title="@string/navigation_bar_category" >

        <PreferenceScreen
            android:key="navigation_bar"
            android:fragment="com.tesla.teslacoil.fragments.NavBar"
            android:summary="@string/navigation_bar_settings_summary"
            android:title="@string/navigation_bar_buttons" />

        <com.tesla.teslacoil.preference.SystemSettingSwitchPreference
            android:key="navigation_bar_show"
            android:title="@string/navbar_enable_bar"
            android:defaultValue="true" />

        <com.tesla.teslacoil.fragments.NavbarSizePreference
            android:key="navigation_bar_dimen"
            android:title="@string/navbar_dimen_title"
            android:dependency="navigation_bar_show" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="navigation_bar"
        android:title="@string/navigation_bar_options" >

        <com.tesla.teslacoil.preference.SystemSettingSwitchPreference
            android:key="navigation_bar_menu_arrow_keys"
            android:title="@string/navigation_bar_arrow_keys_title"
            android:summary="@string/navigation_bar_arrow_keys_summary"
            android:defaultValue="false" />

       <com.tesla.teslacoil.preference.SecureSettingSwitchPreference
            android:key="kill_app_longpress_back"
            android:title="@string/kill_app_longpress_back"
            android:summary="@string/kill_app_longpress_back_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

        <!-- LMT PIE -->
        <Preference
            android:id="@+id/lmt_settings"
            android:title="@string/lmt_settings">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.lmt"
                android:targetClass="com.android.lmt.LMT" />
        </Preference>

</PreferenceScreen>

